--- a/services_nginx_meshviewer/vars/main.yml
+++ b/services_nginx_meshviewer/vars/main.yml
@@ -29,6 +29,11 @@ map_layers:
     url: 'https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png'
     max_zoom: 19
     attribution: '&copy; Openstreetmap France | &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+  - wmflabs_bw:
+    name: 'wmflabs OSM B&W'
+    url: 'https://tiles.wmflabs.org/bw-mapnik/${z}/${x}/${y}.png'
+    max_zoom: 19
+    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
   - esri_world:
     name: 'Esri.WorldImagery'
     url: '//server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}'
