--- a/services_nginx_meshviewer/vars/main.yml
+++ b/services_nginx_meshviewer/vars/main.yml
@@ -29,10 +29,11 @@ map_layers:
     url: 'https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png'
     max_zoom: 19
     attribution: '&copy; Openstreetmap France | &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-  - wmflabs_bw:
-    name: 'wmflabs OSM B&W'
-    url: 'https://tiles.wmflabs.org/bw-mapnik/${z}/${x}/${y}.png'
+  - osm_mapnic_grayscale:
+    name: 'OpenStreetMap.Mapnik.Grayscale'
+    url: 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'
     max_zoom: 19
+    className: 'toGrayscale'
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
   - esri_world:
     name: 'Esri.WorldImagery'
