--- a/mapserver_collector/tasks/main.yml
+++ b/mapserver_collector/tasks/main.yml
@@ -14,20 +14,11 @@
     - /opt/data/tdf5/inn
     - /opt/data/tdf6
     - /opt/data/tdf6/flu
-    - /opt/data/fgw01
-    - /opt/data/fgw01/domain07
-    - /opt/data/fgw02
-    - /opt/data/fgw02/domain01
-    - /opt/data/fgw02/domain03
-    - /opt/data/fgw03
-    - /opt/data/fgw03/domain04
-    - /opt/data/fgw03/domain05
-    - /opt/data/fgw03/domain11
-    - /opt/data/fgw03/domain14
-    - /opt/data/fgw04
-    - /opt/data/fgw04/domain07
-    - /opt/data/fgw04/domain11
-    - /opt/data/fgw04/domain14
+    - /opt/data/siegburg1
+    - /opt/data/siegburg1/domain01
+    - /opt/data/siegburg2
+    - /opt/data/siegburg2/domain02
+    - /opt/data/siegburg2/domain05
     - /opt/data/lohmar1
     - /opt/data/lohmar1/domain01
     - /opt/data/lohmar1/domain03
