--- a/mapserver_collector/tasks/main.yml
+++ b/mapserver_collector/tasks/main.yml
@@ -14,6 +14,8 @@
     - /opt/data/tdf5/inn
     - /opt/data/tdf6
     - /opt/data/tdf6/flu
+    - /opt/data/tdf
+    - /opt/data/tdf/unifi
     - /opt/data/siegburg1
     - /opt/data/siegburg1/domain01
     - /opt/data/siegburg2
